--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "golfTracker",
+  "name": "golftracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/ZacharyBaker/golfTracker.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
